[package]
name = "broadcaster_test"
version = "0.1.0"
authors = ["fourleaf <gundamwing.wei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3"}
futures-util = { version = "0.3"}
broadcaster = { version = "1.0.0" }